# audacity-noise-reduction

./: CMakeLists.txt  Makefile  build_driver.bat  test.bat
noisereduction/: BufferedInputTrack.cpp  BufferedInputTrack.h  BufferedNoiseReduction.cpp  BufferedNoiseReduction.h  BufferedOutputTrack.cpp  BufferedOutputTrack.h  BufferedTrackUtils.cpp  BufferedTrackUtils.h  NoiseReduction.cpp  TrackUtils.cpp  Utils.cpp  Utils.h  main.cpp
noisereduction/tests/: test_audacity.cpp  test_mmap_snd.cpp
